# watchdog

./: .dockerignore  .env.example  .geminiignore  .gitignore  DETAILS.md  README.md  WEBSITE_PLAN.md  architectural_audit_report.md  dev_zj.kdl  docker-compose.yml  justfile  pixi.toml  pyproject.toml  satellites_list.txt  satnogs-decoders_sats.txt  skills-lock.json
.agents/: AGENTS.md
.gemini/: GEMINI.md  settings.json
docs/: ADDING_SATELLITES.md  DETAILS.md  GEMINI_PROJECT.md  WEBSITE_PLAN.md  adding_a_satellite.md  architecture_review_todo.md  benchmark_43880.md  benchmark_49263.md  dataflow.typ  eda_slides.typ  slides.typ
frontend/: .dockerignore  DASHBOARD_SVELTEPLOT_PLAN.md  Dockerfile  fix_charts.py  package.json
models/: 43880_metadata.json  43880_scaler.pkl  43880_vae.pt
notebooks/: comprehensive_analysis.ipynb  fault_sensitivity_sweep.py  fetch_training_data.ipynb  model_experimentation.py  pass_analysis_viz.ipynb  pass_analysis_viz.py  pass_visualization.ipynb  predict_passes.ipynb  process_data.ipynb  sat_analysis.py  satellite_analysis.ipynb  satnogs_api.ipynb  telemetry_inspector.ipynb  telemetry_inspector.py  test.ipynb  uwe4_eda.py  uwe4_pipeline_eda.py  viz_telemetry.ipynb
scripts/: bugsat1_no_val.py  comprehensive_analysis.py  decode_bugsat.py  decode_bugsat_custom.py  decode_uwe4.py  eda_uwe4.py  fetch_training_data.py  generate_faults.py  predict_passes.py  process_bugsat_data.py  process_data.py  process_uwe4.py  test_uwe4.py  train_model.py  viz_telemetry.py  watchdog_runtime.py
src/: MAJOR_BUGS.md  analyze_candidates.py  (+2 more)
(+143 files in other folders)
